JavaScriptCore/runtime/Collector.h
@@ -145,6 +145,8 @@ namespace JSC {
         HashSet<ArgList*>* m_markListSet;
 
 #if ENABLE(JSC_MULTIPLE_THREADS)
+        void makeUsableFromMultipleThreads();
+
         static void unregisterThread(void*);
         void unregisterThread();
 
